<resources>
    <string name="app_name">따봉따봉</string>
    <string name="tab_text_1">연락처</string>
    <string name="tab_text_2">이미지</string>
    <string name="tab_text_3">자유</string>
    <string name="load_contact">연락처 가져오기</string>
    <string name="brag">자랑하기</string>
    <string name="sad">훌쩍...</string>
    <string name="dda">따봉!</string>
    <string name="ok">네</string>
    <string name="ok2">확인</string>
    <string name="gogo">고고</string>
    <string name="cancel">아니오</string>
    <string name="title_score">점수</string>
    <string name="title_gamble">도박</string>
    <string name="select_title1">따봉 클릭 게임</string>
    <string name="select_title2">주호민 야바위 게임</string>
    <string name="select_title3">유저 리스트</string>
    <string name="select_desc1">따봉일때 누릅시다</string>
    <string name="select_desc2">웃는 주호민을 찾읍시다</string>
    <string name="select_desc3">모든 사람을 해금하면 좋은 일이?!</string>
    <string name="cele_title">축하합니다!!!</string>
    <string name="cele_desc">이제 자랑할 때 멋진 왕따봉이 나옵니다!</string>
</resources>